# cognitive-decision-architecture

./: .env > .env  .gitignore  Dockerfile  README.md  architecture.md  cda_gate.db  docker-compose.yml  owasp-mapping.md  pyproject.toml  pytest.ini  regulatory-mapping.md  startup.sh
cda/: README.md  __init__.py  monitor.py
cda.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
cda/context_provider/: __init__.py
cda/gate/: __init__.py  engine.py
cda/kernel/: __init__.py  engine.py  models.py
cda/shared/: __init__.py  models.py
cda/tests/: test_integration.py  test_logic.py
