[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cda"
version = "13.3.0"
description = "Cognitive Decision Architecture - Secure Implementation"
requires-python = ">=3.12"

dependencies = [
    "fastapi",
    "pydantic",
    "pytest",
    "httpx",
    "pyseto",
    "sqlalchemy",
    "python-dotenv",
    "uvicorn"
]

[tool.pytest.ini_options]
testpaths = ["cda/tests"]
pythonpath = ["."]