[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cda"
version = "13.3.0"
description = "Cognitive Decision Architecture - Secure Implementation"
requires-python = ">=3.12"

dependencies = [
    "fastapi==0.110.0",
    "pydantic==2.6.3",
    "pytest==8.0.2",
    "httpx==0.27.0",
    "pyseto==1.7.8",
    "sqlalchemy==2.0.27",
    "python-dotenv==1.0.1",
    "uvicorn==0.27.1"
]

[tool.pytest.ini_options]
testpaths = ["cda/tests"]
pythonpath = ["."]